# ucc

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: cli.hpp  context.hpp  error.hpp
include/ast/: ast.hpp  locations.hpp  node.hpp
include/ast/arithmetic/: assign_op.hpp  cond_expression.hpp  incr_decr_op.hpp  rl_operators.hpp  unary.hpp
include/ast/arrays/: abstract_arrays.hpp  array_definition.hpp  array_index.hpp
include/ast/decls/: abstract_declarator.hpp  casting.hpp  declaration.hpp  declarator.hpp  pointer.hpp  specifier_qualifiers.hpp  type_name.hpp
include/ast/functions/: abstract_functions.hpp  function_call.hpp  function_declarator.hpp  function_definition.hpp  function_pointer.hpp  parameter.hpp
include/ast/misc/: initialiser_designator.hpp  misc.hpp  primaries.hpp
include/ast/statements/: block.hpp  for.hpp  if_else.hpp  jumps.hpp  switch_case.hpp  while.hpp
include/ast/struct_union/: struct_union.hpp  struct_union_member.hpp
include/ast/struct_union_enum/: enum_spec.hpp  enumerator.hpp  struct_union.hpp  struct_union_decls.hpp  struct_union_member.hpp
include/context/: context.hpp  context_internal.hpp  context_type_tmp.hpp
include/context/types/: context_type.hpp  context_type_enums.hpp
src/: cli.cpp  cli.hpp  context.cpp  error.cpp  error.hpp  parser.y  ucc.cpp
src/ast/: ast.hpp  constant.cpp  constant.hpp  declaration.cpp  declaration.hpp  declaration_specifier.cpp  declaration_specifier.hpp  declarator.hpp  identifier.cpp  identifier.hpp  lexer.l  misc.cpp  misc.hpp  node.cpp  node.hpp  parser.y  primaries.hpp  specifier_qualifiers.cpp  specifier_qualifiers.hpp
src/ast/misc/: misc.cpp  (+4 more)
src/context/: context.cpp  context_internal.cpp  context_type_tmp.cpp
src/interm_repr/: interm_repr.hpp
tests/: test_parser.sh
(+83 files in other folders)
